--- a/wusick/app/views/partials/login.html
+++ b/wusick/app/views/partials/login.html
@@ -3,7 +3,7 @@
   <div id="loginpage">
         <div class="col-xs-12">
                 <div class="clearfix"></div>
-                <form id="login" role="form" name ="login">
+                <form id="login" role="form" name ="login" class="min">
                   <div class="form-group">
                       <label id="labmail" for="nombre">Email</label>
                       <input type="email" placeholder="Em@il" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Em@il'" ng-model="userData.email" id="nombre" name="nombre" class="form-control"/>
