--- a/wusick/app/styles/main.css
+++ b/wusick/app/styles/main.css
@@ -1,27 +1,41 @@
-/* Space out content a bit */
-body {
-  padding-top: 20px;
-  padding-bottom: 20px;
-}
+
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
 /* Custom page header */
 .header {
-  border-bottom: 2px solid #e5e5e5;
-  margin-bottom: 10px;
+  background: #003366;
 
+}
+
+aside{
+  background: #f5f5f5;
 }
 /* Make the masthead heading the same height as the navigation */
 .header h3 {
   margin-top: 0;
   margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
+  line-height: 48px;
+  color:#FFF;
 }
 
 .nav > li > a{
-  padding: 10px;
+  padding: 15px;
+  color:#FFF;
 }
+
+.nav-tabs{
+  border:0;
+}
+
+.nav-tabs > li > a:hover {
+border-color:transparent;
+}
+
+.nav > li > a:hover, .nav > li > a:focus {
+text-decoration: underline;
+background-color: transparent;
+}
+
 
 /* Custom page footer */
 .footer {
@@ -37,22 +51,6 @@ body {
 }
 
 /* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
-}
-
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
-}
 
 .slide-hide, .slide-show {
     -webkit-transition:all ease .7s;
@@ -65,6 +63,307 @@ body {
   float: right;
 }
 
+form.min {
+    width: 70%;
+    margin: 0 auto;
+}
+
+#loginpage, #registropage{
+  margin-top:30px;
+}
+
+/*Main*/
+#mainpage{
+
+}
+
+
+
+
+/* =================================
+                Menu
+==================================== */
+.sideMenu {
+    width: 105%;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    font-size: 13px;
+    background-color:#f5f5f5;
+    
+}
+
+.sideMenu a {
+    color: #000000;
+}
+
+.sideMenu a:hover, .sideMenu a:focus {
+    text-decoration: none;
+}
+
+.sideMenu ul a:hover {
+    color: #000000;
+}
+
+/* First level */
+.sideMenu > li {
+    overflow: hidden;
+    height: 50px;
+    line-height: 50px;
+    text-indent: 25px;
+    position: relative;
+    z-index: 2;
+    border-top: 1px solid #ffffff;
+    border-bottom: 1px solid #dddddd;
+    -webkit-backface-visibility: hidden; /* Chrome transition flicker & double border fix */
+    -webkit-transition: height .2s ease;
+        -moz-transition: height .2s ease;
+            transition: height .2s ease;
+}
+
+.sideMenu > li:first-child,
+.sideMenu > li.first {
+    border-top: none;
+}
+
+.sideMenu > li:last-child {
+    border-bottom: none;
+}
+
+.sideMenu > li.last {
+    border-bottom: none;
+}
+
+.sideMenu > li:hover {
+    background-color: #f9f9f9;
+}
+
+.sideMenu > li.open {
+    background-color: #f9f9f9;
+    position: relative;
+    -webkit-backface-visibility: hidden; /* Chrome transition flicker & double border fix */
+    -webkit-transition: height .4s ease;
+        -moz-transition: height .4s ease;
+            transition: height .4s ease;
+}
+
+.sideMenu > li.active {
+    background-color: #f0f0f0;
+    border-top: 1px solid #dddddd;
+    -webkit-box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, .1);
+        -moz-box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, .1);
+            box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, .1);
+}
+
+.sideMenu > li.active::before {
+    content:"";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 9px solid rgba(255,255,255,0);
+    border-right: 10px solid #dddddd;
+    border-bottom: 9px solid rgba(255,255,255,0);
+    top: 18px;
+    right: 0;
+}
+
+.sideMenu > li.active::after {
+    content:"";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 9px solid rgba(255,255,255,0);
+    border-right: 10px solid #ffffff;
+    border-bottom: 9px solid rgba(255,255,255,0);
+    top: 17px;
+    right: 0;
+}
+
+.sideMenu > li.active:first-child {
+    border-top: none;
+}
+
+.sideMenu > li.parent {
+    height: 100%;
+    background-color: #f9f9f9;
+}
+
+.sideMenu > li > a {
+    display: block;
+    height: 50px;
+}
+
+/* Second level */
+.sideMenu > li > ul {
+    margin: 0;
+    padding-bottom: 10px;
+    z-index: 1;
+    list-style: none;
+    background-color: #eeeeee;
+    border-top: 1px solid #ffffff;
+    -webkit-box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, .1);
+        -moz-box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, .1);
+            box-shadow: inset 0px 1px 2px 0px rgba(0, 0, 0, .1);
+}
+
+.sideMenu > li.active > ul {
+    font-weight: normal;
+}
+
+.sideMenu > li > ul > li:first-child {
+    padding-top: 5px;
+    border-top: 1px solid #dddddd;
+}
+
+.sideMenu > li > ul > li > a {
+    display: block;
+    padding: 5px 0;
+    font-size: 12px;
+}
+
+.sideMenu > li > ul > li > a:hover {
+    color: #555555;
+}
+
+.sideMenu > li > ul > li.active > a {
+    font-weight: bold;
+    color: #444444;
+}
+
+.sideMenu > li > ul > li.active::before {
+    content:"";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 9px solid rgba(255,255,255,0);
+    border-right: 10px solid #dddddd;
+    border-bottom: 9px solid rgba(255,255,255,0);
+    top: 18px;
+    right: 0;
+}
+
+.sideMenu > li > ul > li.active::after {
+    content:"";
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-top: 9px solid rgba(255,255,255,0);
+    border-right: 10px solid #ffffff;
+    border-bottom: 9px solid rgba(255,255,255,0);
+    top: 17px;
+    right: 0;
+}
+
+.sideMenu > li.active:first-child {
+    border-top: none;
+}
+
+/* Count */
+.sideMenu > li > span {
+    display: block;
+    width: 18px;
+    height: 18px;
+    text-indent: 0;
+    line-height: 18px;
+    text-align: center;
+    font-size: 11px;
+    position: absolute;
+    z-index: -1;
+    top: 17px;
+    right: 20px;
+    color: #ffffff;
+    background-color: #bbbbbb;
+    -webkit-box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 1);
+        -moz-box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 1);
+            box-shadow: 0px 1px 0px 0px rgba(255, 255, 255, 1);
+    -webkit-border-radius: 2px;
+        -moz-border-radius: 2px;
+            border-radius: 2px;
+}
+
+/* top menu */
+.topMenu {
+    list-style: none;
+    margin: 0;
+    padding: 20px 0;
+    position: relative;
+    z-index: 999;
+    background-color: #333333;
+}
+
+.topMenu ul {
+    list-style: none;
+    padding-top: 0;
+}
+
+.topMenu a {
+    padding-left: 25px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    display: block;
+    color: #cccccc;
+}
+
+.topMenu a:hover {
+    text-decoration: none;
+    color: #ffffff;
+}
+
+.topMenu li.active {
+    background-color: #000000;
+}
+
+.topMenu li.active a {
+    color: #ffffff;
+}
+
+/* search */
+aside .form-search {
+    margin: 20px 0;
+}
+
+aside .form-search .input-prepend .search-query {
+    -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+            border-radius: 5px;
+}
+
+aside .form-search .input-prepend .btn {
+    position: absolute;
+    z-index: 3;
+    width: 30px;
+    height: 30px;
+    margin-left: 10%;
+    background: url('../images/icon-search.png') no-repeat 10px 9px;
+    border: none;
+    -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+            box-shadow: none;
+}
+
+aside .form-search input[type="text"] {
+    width: 80%;
+    margin-left: 10%;
+    padding-left: 30px;
+    background-color: #f5f5f5;
+    -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+            box-shadow: none;
+}
+
+aside .form-search input[type="text"]:focus {
+    background-color: #ffffff;
+}
+
+/* =================================
+                comment
+==================================== */
+
+#comment{
+  border:0;
+  border-radius:0;
+  margin:0;
+}
 /* Responsive: Portrait tablets and up */
 @media screen and (max-width: 768px) {
   #izq{
@@ -83,13 +382,11 @@ body {
   .header,
   .marketing,
   .footer {
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
   }
   /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
+ 
   /* Remove the bottom border on the jumbotron for visual effect */
   .jumbotron {
     border-bottom: 0;
