--- a/wusick/app/views/partials/loginAdmin.html
+++ b/wusick/app/views/partials/loginAdmin.html
@@ -2,7 +2,7 @@
     <h1>LOGIN ADMINISTRACION</h1>
         <div class="col-xs-12">
                 <div class="clearfix"></div>
-                <form id="login" role="form" name ="login">
+                <form id="login" role="form" name ="login" class="min">
                   <div class="form-group">
                       <label id="labmail" for="nombre">Email</label>
                       <input type="email" placeholder="Em@il" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Em@il'" ng-model="userData.email" id="nombre" name="nombre" class="form-control"/>
