--- a/wusick/app/views/partials/jades/admin-index.html
+++ b/wusick/app/views/partials/jades/admin-index.html
@@ -28,6 +28,7 @@
 					<td>{{item.nombre}}</td>
 					<td>{{item.email}}</td>
 					<td>{{item.fecha_alta}}</td>
+					<td>{{item.Tipo_usuarios_idTipo_usuarios}}</td>
 
 					
 					<td ng-if="item.Tipo_usuarios_idTipo_usuarios == 1">
@@ -91,7 +92,7 @@
 		            <label id="labname" for="nombreU" class="control-label">Nombre</label>
 		             <span ng-show="registro.nombreU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 		             <span ng-show="registro.nombreU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-		            <input type="text" name="nombreU" class="form-control" placeholder={{nombre}} ng-model="userData.nombre" ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="20" required/>
+		            <input type="text" name="nombreU" class="form-control" placeholder={{nombre}} ng-value="nombre" ng-model="userData.nombre" ng-pattern="/\w/g" ng-Minlength="6" ng-Maxlength="20" required/>
 		           	<p><small class="text-danger" ng-show="registro.nombreU.$invalid">Entre 6 y 20 caracteres alfanuméricos.</small></p>
 	            </div>
 	        <!--./nombre -->		            
@@ -117,80 +118,72 @@
 	        <!-- ./contraseña -->
 	            <div class="clearfix"></div>
 	            
+            <!--USUARIO BASICO-->
+		    	<div ng-if="tipo == 1">
+						<div ng-class="{'has-error': registro.fechaU.$invalid, 'has-success': registro.fechaU.$valid}" class="form-group"">
+				            <label id="labfec" for="fechaU" class="control-label">Fecha de Nacimiento</label>
+				            <span ng-show="registro.fechaU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+			                <span ng-show="registro.fechaU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
+				            <input type="date" name="fechaU" id="fechaU" class="form-control"  ng-model="userData.fecha" ng-required="userData.tipo=='1'"/>
+				            <small class="text-danger" ng-show="registro.fechaU.$invalid">Selecciona tu fecha de nacimiento.</small>
+			            </div>
+			            <div ng-class="{'has-error': registro.sexoU.$invalid, 'has-success': registro.sexoU.$valid}" class="form-group">
+				            <label id="labsexo" for="sexoU" class="control-label">Sexo</label>
+				            <span ng-show="registro.sexoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+			                <span ng-show="registro.sexoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
+				            	<select id="sexoU" ng-model="userData.sexo" name="sexoU" class="form-control" ng-required="userData.tipo=='1'">
+				            		<option value="M">Mujer</option>
+				            		<option value="H">Hombre</option>
+				            	</select>
+				            <small class="text-danger" ng-show="registro.sexoU.$invalid">¿Eres hombre o mujer?</small>
+			            </div>
+				</div>
+			<!-- ./USUARIO BASICO-->
 
-			
-	            <div ng-class="{'has-error': registro.tipoU.$invalid,'has-success': registro.tipoU.$valid}" class="form-group">
-		            <label id="labtipo" for="tipoU" class="control-label">Tipo de Perfil</label>
-		            <span ng-show="registro.tipoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-		            <span ng-show="registro.tipoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-		            <select id="tipoU"  name="tipoU" class="form-control" ng-model="userData.tipo" ng-init="tiposUsuario()" required>
-		            	<option ng-repeat="tipo in tipos" ng-value="{{item.idTipo_usuarios}}">{{item.nombre}}</option>
-		            </select>
-		            <small class="text-danger" ng-show="registro.tipoU.$invalid">Debes seleccionar un tipo de perfil obligatoriamente.</small>
-	            </div>
-	            <div class="clearfix"></div>
-	            
-	            
-	            
-		    	<td ng-if="{{tipo}} == '1'">
-	 			<!--USUARIO BASICO-->
-					<div ng-class="{'has-error': registro.fechaU.$invalid, 'has-success': registro.fechaU.$valid}" class="form-group"">
-			            <label id="labfec" for="fechaU" class="control-label">Fecha de Nacimiento</label>
-			            <span ng-show="registro.fechaU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-		                <span ng-show="registro.fechaU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-			            <input type="date" name="fechaU" id="fechaU" class="form-control"  ng-model="userData.fecha" ng-required="userData.tipo=='1'"/>
-			            <small class="text-danger" ng-show="registro.fechaU.$invalid">Selecciona tu fecha de nacimiento.</small>
-		            </div>
-		            <div ng-class="{'has-error': registro.sexoU.$invalid, 'has-success': registro.sexoU.$valid}" class="form-group">
-			            <label id="labsexo" for="sexoU" class="control-label">Sexo</label>
-			            <span ng-show="registro.sexoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-		                <span ng-show="registro.sexoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-			            	<select id="sexoU" ng-model="userData.sexo" name="sexoU" class="form-control" ng-required="userData.tipo=='1'">
-			            		<option value="M">Mujer</option>
-			            		<option value="H">Hombre</option>
-			            	</select>
-			            <small class="text-danger" ng-show="registro.sexoU.$invalid">¿Eres hombre o mujer?</small>
-		            </div>
-				</td>
-				<td ng-if="{{tipo}}  == '2'">
-	   			<!--USUARIO ARTISTA-->
-					<div ng-class="{'has-error': registro.generoU.$invalid, 'has-success': registro.generoU.$valid}" class="form-group">
-			            <label id="labgenero" for="generoU" class="control-label">Género Musical</label>
-			            <span ng-show="registro.generoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-		            	<span ng-show="registro.generoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-			            	<select id="generoU" ng-model="userData.genero" name="generoU" class="form-control" ng-required="userData.tipo=='2'" ng-init="generos()">
-			            		<option ng-repeat="genero in generos" ng-value="{{genero.idGeneros}}">{{genero.nombre}}</option>
-			            	</select>
-			            <small class="text-danger" ng-show="registro.generoU.$invalid">¿Qué tipo de música toca tu grupo?</small>
-		            </div>
-				</td>
-				<td ng-if="{{tipo}} == '3'">
-   				<!--USUARIO SALA-->
-					<div ng-class="{'has-error': registro.aforoU.$invalid, 'has-success': registro.aforoU.$valid}" class="form-group">
-			            <label id="labafo" for="aforoU" class="control-label">Aforo</label>
-			            <span ng-show="registro.aforoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-		             	<span ng-show="registro.aforoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-			            <input type="text" id="aforoU" ng-model="userData.aforo" name="aforoU" class="form-control" ng-pattern="/\d/g" ng-required="userData.tipo=='3'" />
-			            <small class="text-danger" ng-show="registro.aforoU.$invalid">Introduce el aforo de la sala que vas a registar.</small>
-		            </div>
-		            <div ng-class="{'has-error': registro.poblacionU.$invalid, 'has-success': registro.poblacionU.$valid}" class="form-group">
-			            <label id="labafo" for="poblacionU" class="control-label">Población</label>
-			            <span ng-show="registro.poblacionU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-		            	<span ng-show="registro.poblacionU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-			            <input type="text" id="poblacionU" ng-model="userData.poblacion" name="poblacionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
-			            <small class="text-danger" ng-show="registro.poblacionU.$invalid">¿Dónde está la sala?.</small>
-		            </div>
-		            <div ng-class="{'has-error': registro.direccionU.$invalid, 'has-success': registro.direccionU.$valid}" class="form-group">
-			            <label id="labafo" for="direccionU" class="control-label">Dirección</label>
-			            <span ng-show="registro.direccionU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
-		                <span ng-show="registro.direccionU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-			            <input type="text" id="direccionU" ng-model="userData.direccion" name="direccionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
-			            <small class="text-danger" ng-show="registro.direccionU.$invalid">¿En que dirección exacta?.</small>
-		            </div>
-				</td>
+	   		<!--USUARIO ARTISTA-->			
+				<div ng-if="tipo == 2">
+						<div ng-class="{'has-error': registro.generoU.$invalid, 'has-success': registro.generoU.$valid}" class="form-group">
+				            <label id="labgenero" for="generoU" class="control-label">Género Musical</label>
+				            <span ng-show="registro.generoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+			            	<span ng-show="registro.generoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
+				            	<select id="generoU" ng-model="userData.genero" name="generoU" class="form-control" ng-required="userData.tipo=='2'" ng-init="generos()">
+				            		<option ng-repeat="genero in generos" ng-value="{{genero.idGeneros}}">{{genero.nombre}}</option>
+				            	</select>
+				            <small class="text-danger" ng-show="registro.generoU.$invalid">¿Qué tipo de música toca tu grupo?</small>
+			            </div>
+				</div>
+			<!-- ./USUARIO ARTISTA-->
+				
+			<!--USUARIO SALA-->
+				<div ng-if="tipo == 3">
+						<div ng-class="{'has-error': registro.aforoU.$invalid, 'has-success': registro.aforoU.$valid}" class="form-group">
+				            <label id="labafo" for="aforoU" class="control-label">Aforo</label>
+				            <span ng-show="registro.aforoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+			             	<span ng-show="registro.aforoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
+				            <input type="text" id="aforoU" ng-model="userData.aforo" name="aforoU" class="form-control" ng-pattern="/\d/g" ng-required="userData.tipo=='3'" />
+				            <small class="text-danger" ng-show="registro.aforoU.$invalid">Introduce el aforo de la sala que vas a registar.</small>
+			            </div>
+			            <div ng-class="{'has-error': registro.poblacionU.$invalid, 'has-success': registro.poblacionU.$valid}" class="form-group">
+				            <label id="labafo" for="poblacionU" class="control-label">Población</label>
+				            <span ng-show="registro.poblacionU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+			            	<span ng-show="registro.poblacionU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
+				            <input type="text" id="poblacionU" ng-model="userData.poblacion" name="poblacionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
+				            <small class="text-danger" ng-show="registro.poblacionU.$invalid">¿Dónde está la sala?.</small>
+			            </div>
+			            <div ng-class="{'has-error': registro.direccionU.$invalid, 'has-success': registro.direccionU.$valid}" class="form-group">
+				            <label id="labafo" for="direccionU" class="control-label">Dirección</label>
+				            <span ng-show="registro.direccionU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
+			                <span ng-show="registro.direccionU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
+				            <input type="text" id="direccionU" ng-model="userData.direccion" name="direccionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
+				            <small class="text-danger" ng-show="registro.direccionU.$invalid">¿En que dirección exacta?.</small>
+			            </div>
+				</div>
+			<!-- ./USUARIO SALA-->
+				
 				<div class="form-group text-center">
 	            	<button class="btn btn-info" value="Log in" ng-click="createUsuario()" ng-disabled="registro.$pristine || registro.$invalid">Confirmar cambios</button>
 	        	</div>
+	        	
 		    </form>
         </div>
     </div>
