--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -36,7 +36,7 @@
                     <textarea class="form-control" id="comment">
                         
                     </textarea>
-                            <p>{{usuario.idUsuario}}</p>
+                            <p>{{usuario.fecha}}</p>
                 </form>
                 
 			</div>
