--- a/wusick/app/views/partials/navbarAdmin.html
+++ b/wusick/app/views/partials/navbarAdmin.html
@@ -1,7 +1,7 @@
-﻿<div class="header navbar-collapse" ng-controller="NavbarMainCtrl">
+﻿<div class="header navbar-collapse" ng-controller="navbarAdminCtrl">
   <ul class="nav nav-pills pull-right">
     <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
-        <a ng-href="{{item.link}}">{{item.title}}</a>
+        <a ng-href="{{item.link}}" id="{{item.id}}">{{item.title}}</a>
     </li>
   </ul>
   <span style="float:left; display: inline-block;" class="glyphicon glyphicon-wrench"></span>
