--- a/wusick/app/styles/main.css
+++ b/wusick/app/styles/main.css
@@ -77,7 +77,7 @@ form.min {
     margin: 0 auto;
 }
 
-#loginpage, #registropage{
+#loginpage, #registropage, #recpasspage{
   margin-top:30px;
 }
 
