--- a/wusick/app/views/partials/jades/admin-index.html
+++ b/wusick/app/views/partials/jades/admin-index.html
@@ -28,7 +28,6 @@
 					<td>{{item.nombre}}</td>
 					<td>{{item.email}}</td>
 					<td>{{item.fecha_alta}}</td>
-					<td>{{item.Tipo_usuarios_idTipo_usuarios}}</td>
 
 					
 					<td ng-if="item.Tipo_usuarios_idTipo_usuarios == 1">
@@ -56,6 +55,7 @@
 
 					<td class="text-center">
 						<a data-toggle="modal" data-target="#myModal">
+							<!--  img src='../../../images/edit.png', alt='Editar' data={{item.idUsuario}} name={{item.nombre}} ng-click='modificarUsuario($event)' / -->
 							<img src='../../../images/edit.png', alt='Editar' data={{item.idUsuario}} name={{item.nombre}} ng-click='modificarUsuario($event)' />
 						</a>
 					</td>
@@ -120,20 +120,24 @@
 	            
             <!--USUARIO BASICO-->
 		    	<div ng-if="tipo == 1">
+		    	
 						<div ng-class="{'has-error': registro.fechaU.$invalid, 'has-success': registro.fechaU.$valid}" class="form-group"">
 				            <label id="labfec" for="fechaU" class="control-label">Fecha de Nacimiento</label>
 				            <span ng-show="registro.fechaU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 			                <span ng-show="registro.fechaU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-				            <input type="date" name="fechaU" id="fechaU" class="form-control"  ng-model="userData.fecha" ng-required="userData.tipo=='1'"/>
+				            <input type="date" name="fechaU" id="fechaU" class="form-control" value="{{fecha_nac}}" ng-model="userData.fecha" ng-required="userData.tipo=='1'"/>
 				            <small class="text-danger" ng-show="registro.fechaU.$invalid">Selecciona tu fecha de nacimiento.</small>
 			            </div>
+				            
 			            <div ng-class="{'has-error': registro.sexoU.$invalid, 'has-success': registro.sexoU.$valid}" class="form-group">
 				            <label id="labsexo" for="sexoU" class="control-label">Sexo</label>
 				            <span ng-show="registro.sexoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 			                <span ng-show="registro.sexoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
 				            	<select id="sexoU" ng-model="userData.sexo" name="sexoU" class="form-control" ng-required="userData.tipo=='1'">
-				            		<option value="M">Mujer</option>
+				            		<option value="M" selected>Mujer</option>
 				            		<option value="H">Hombre</option>
+				            		<option value="H">Hombre 2</option>
+				            		<option value="H">Hombre 3</option>
 				            	</select>
 				            <small class="text-danger" ng-show="registro.sexoU.$invalid">¿Eres hombre o mujer?</small>
 			            </div>
@@ -160,21 +164,21 @@
 				            <label id="labafo" for="aforoU" class="control-label">Aforo</label>
 				            <span ng-show="registro.aforoU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 			             	<span ng-show="registro.aforoU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-				            <input type="text" id="aforoU" ng-model="userData.aforo" name="aforoU" class="form-control" ng-pattern="/\d/g" ng-required="userData.tipo=='3'" />
+				            <input type="text" id="aforoU" ng-model="userData.aforo" placeholder={{aforo}} name="aforoU" class="form-control" ng-pattern="/\d/g" ng-required="userData.tipo=='3'" />
 				            <small class="text-danger" ng-show="registro.aforoU.$invalid">Introduce el aforo de la sala que vas a registar.</small>
 			            </div>
 			            <div ng-class="{'has-error': registro.poblacionU.$invalid, 'has-success': registro.poblacionU.$valid}" class="form-group">
 				            <label id="labafo" for="poblacionU" class="control-label">Población</label>
 				            <span ng-show="registro.poblacionU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 			            	<span ng-show="registro.poblacionU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-				            <input type="text" id="poblacionU" ng-model="userData.poblacion" name="poblacionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
+				            <input type="text" id="poblacionU" ng-model="userData.poblacion" placeholder={{poblacion}}  name="poblacionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
 				            <small class="text-danger" ng-show="registro.poblacionU.$invalid">¿Dónde está la sala?.</small>
 			            </div>
 			            <div ng-class="{'has-error': registro.direccionU.$invalid, 'has-success': registro.direccionU.$valid}" class="form-group">
 				            <label id="labafo" for="direccionU" class="control-label">Dirección</label>
 				            <span ng-show="registro.direccionU.$valid"  class="glyphicon glyphicon-ok form-control-feedback"></span>
 			                <span ng-show="registro.direccionU.$invalid"  class="glyphicon glyphicon-remove form-control-feedback"></span>
-				            <input type="text" id="direccionU" ng-model="userData.direccion" name="direccionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
+				            <input type="text" id="direccionU" ng-model="userData.direccion" placeholder={{direccion}} name="direccionU" class="form-control" ng-pattern="/\w/g" ng-Maxlength="45" ng-required="userData.tipo=='3'" />
 				            <small class="text-danger" ng-show="registro.direccionU.$invalid">¿En que dirección exacta?.</small>
 			            </div>
 				</div>
@@ -190,8 +194,7 @@
 
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
       </div>
     </div>
   </div>
