--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -1,45 +1,55 @@
-<div ng-include="'partials/navbarMain'"></div>
-
+<div class="includehead" ng-include="'partials/navbarMain'"></div>
+<div ng-include="'partials/sidemenu'"></div>
 	<div id="mainpage" ng-init="">
-        <aside class="visible-desktop col-xs-3 row">
-    <!-- search -->
-    <form class="form-search">
-        <div class="input-prepend">
-            <button type="submit" class="btn"></button>
-            <input type="text" class="search-query">
-        </div>
-    </form>
+        <section class="col-xs-12 col-md-7" id="central" >
+            <h3 id="welcome">¡ Bienvenido <span class="text-info">{{usuario.nombre}}</span> !</h3>
+			<div class="col-xs-12 mainmid">
+                <div class="tabbable widget" id="labcomment">
+                <ul class="nav nav-tabs">
+                    <li class="active"><a href="#tab3" data-toggle="tab">· Post ·</a></li>
+                </ul>
+                <div class="tab-content">
+                    <div class="tab-pane active" id="tab3">
+                    </div>
+                    <div class="tab-pane" id="tab4">
+                        <p>Section 2</p>
+                    </div>
+                </div>
+            </div>
 
-    <!-- menu -->
-    <ul class="sideMenu">
-        <li class="active">
-            <a href="index.html">Amigos</a>
-        </li>
-        <li>
-            <a href="typography.html">Eventos</a>
-        </li>
-        <li>
-            <a href="form.html">Aristas</a>
-        </li>
-        <li>
-            <a href="buttons.html">Salas</a>
-        </li>
-        
-    </ul>
+                <form role="form" id="cf1">
+                    <textarea class="form-control" id="comment" resise="none" required></textarea>
 
-</aside>
-
-
-        <div class="col-xs-12 col-md-9" id="central">
-			<div class="col-xs-12">
-                <form role="form">
-                    <textarea class="form-control" id="comment">
-                        
-                    </textarea>
-                            <p>{{usuario.fecha}}</p>
+                    <button type="submit" class="btn btn-info" value="Log in" ng-click="postear()" ng-disabled="cf1.$pristine || cf1.$invalid">Publicar</button>
+    
                 </form>
+
+                <div id="listapost">
+                    <ul class="list-unstyled">
+                        <li ng-repeat="post in posts">
+                            <div class="post">
+                                <div class="posthead">
+                                    <img src="" class="img-responsive" />
+                                    <strong class="text-info">{{post.nombre}}<span><img></span>{{post.remitente}}</strong>
+                                    <small class="text-right">{{post.fecha}}</small>
+                                </div>
+                                <p>{{post.contenido}}</p>
+                            </div>
+                        </li>
+                    </ul>
+                
+    
+                </div>
                 
 			</div>
-        </div>
+
+
+        </section>
+        <div id="daside"></div>
         <div class="clearfix"></div>
+
+
+
+
+
     </div>
