--- a/wusick/app/views/partials/navbar.html
+++ b/wusick/app/views/partials/navbar.html
@@ -1,4 +1,4 @@
-<div class="header navbar-collapse" ng-controller="NavbarCtrl">
+<div class="header navbar-collapse" ng-controller="NavbarCtrl" id="navi">
   <ul class="nav nav-tabs pull-right">
     <li ng-repeat="item in menu" ng-class="{active: isActive(item.link)}">
         <a ng-href="{{item.link}}">{{item.title}}</a>
