--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -18,9 +18,9 @@
             </div>
 
                 <form role="form" id="cf1">
-                    <textarea class="form-control" id="comment" resise="none" required></textarea>
-
-                    <button type="submit" class="btn btn-info" value="Log in" ng-click="postear()" ng-disabled="cf1.$pristine || cf1.$invalid">Publicar</button>
+                    <textarea class="form-control" id="comment" resise="none" required ng-model="datosPost.contenido"></textarea>
+                    <input type="text" ng-model="datosPost.nombre" value='{{usuario.nombre}}' ng-hide="true">
+                    <button type="submit" class="btn btn-info" ng-click="postear()" ng-disabled="cf1.$pristine || cf1.$invalid">Publicar</button>
     
                 </form>
 
