--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -19,7 +19,10 @@
 
                 <form role="form" id="cf1">
                     <textarea class="form-control" id="comment" resise="none" required ng-model="datosPost.contenido"></textarea>
-                    <input type="text" ng-model="datosPost.nombre" value='{{usuario.nombre}}' ng-hide="true">
+                   <!-- <select name="amigos" id="amigos" ng-model="datosPost.amigos">
+                        <option ng-repeat="amigo in amigos">{{amigo.}}</option>
+                    </select>-->
+                    <input type="text" ng-model="datosPost.nombre" value='{{usuario.nombre}}' ng-hide="true"> 
                     <button type="submit" class="btn btn-info" ng-click="postear()" ng-disabled="cf1.$pristine || cf1.$invalid">Publicar</button>
     
                 </form>
