--- a/wusick/app/styles/main.css
+++ b/wusick/app/styles/main.css
@@ -34,7 +34,7 @@ aside{
 }
 
 
-#navi{
+#navi ul.nav-tabs{
 border-bottom: 0px solid #ddd;
 }
 
@@ -42,6 +42,7 @@ border-bottom: 0px solid #ddd;
 float: left;
 margin-bottom: 0px;
 }
+
 
 #navi.nav-tabs > li > a {
 line-height: 1.42857143;
@@ -82,18 +83,20 @@ background-color: #0066CC;
 
 
 #navi .nav-tabs > li.active > a, #navi .nav-tabs > li.active > a:hover, #navi .nav-tabs > li.active > a:focus{
-
-background-color: transparent;
+background-color: transparent !important;
 border:0;
 color:white;
-background:#001B36;
 border-radius:0;
+}
+
+.nav-tabs > li.active > a, .nav-tabs > li.active > a:hover, .nav-tabs > li.active > a:focus{
+ background-color: transparent !important;   
 }
 
 #navi .nav-tabs > li > a {
 margin-right: 2px;
 line-height: 1.42857143;
-border: 1px solid transparent;
+border: 0;
 border-radius: 0;
 
 }
