--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -19,10 +19,10 @@
 
                 <form role="form" id="cf1">
                     <textarea class="form-control" id="comment" resise="none" required ng-model="datosPost.contenido"></textarea>
-                   <!-- <select name="amigos" id="amigos" ng-model="datosPost.amigos">
-                        <option ng-repeat="amigo in amigos">{{amigo.}}</option>
-                    </select>-->
-                    <input type="text" ng-model="datosPost.nombre" value='{{usuario.nombre}}' ng-hide="true"> 
+                   <select ng-model="datosPost.amigos" class="form-control">
+                        <option ng-repeat="amigo in amigos">{{amigo.nombre}}</option>
+                    </select>
+                   <!-- <input type="text" ng-model="datosPost.nombre" value={{usuario.nombre}} ng-hide="true"> -->
                     <button type="submit" class="btn btn-info" ng-click="postear()" ng-disabled="cf1.$pristine || cf1.$invalid">Publicar</button>
     
                 </form>
@@ -32,7 +32,7 @@
                         <li ng-repeat="post in posts">
                             <div class="post">
                                 <div class="posthead">
-                                    <img src="" class="img-responsive" />
+                                    <img ng-src="{{post.img}}" class="img-responsive" />
                                     <strong class="text-info">{{post.nombre}}<span><img></span>{{post.remitente}}</strong>
                                     <small class="text-right">{{post.fecha}}</small>
                                 </div>
