--- a/wusick/app/styles/main.css
+++ b/wusick/app/styles/main.css
@@ -117,7 +117,7 @@ border-radius: 0;
 
 /* Main marketing message and sign up button */
 
-.slide-hide, .slide-show {
+ .post {
     -webkit-transition:all ease .7s;
     -moz-transition:all ease .7s;
     -o-transition:all ease .7s;
@@ -217,6 +217,11 @@ width: 16.66666667%;
 #cf1 select {
    width: 50%;
     display: inline;
+}
+
+#cf1  input#postimg{
+     width: 30%;
+     display: inline;
 }
 
 #cf1 .btn {
