--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -6,22 +6,21 @@
 			<div class="col-xs-12 mainmid">
                 <div class="tabbable widget" id="labcomment">
                 <ul class="nav nav-tabs">
-                    <li class="active"><a href="#tab3" data-toggle="tab">· Post ·</a></li>
+                    <li class="active"><a href="" data-toggle="tab">· Post ·</a></li>
                 </ul>
                 <div class="tab-content">
                     <div class="tab-pane active" id="tab3">
-                    </div>
-                    <div class="tab-pane" id="tab4">
-                        <p>Section 2</p>
                     </div>
                 </div>
             </div>
 
                 <form role="form" id="cf1">
                     <textarea class="form-control" id="comment" resise="none" required ng-model="datosPost.contenido"></textarea>
-                   <select ng-model="datosPost.amigos" class="form-control">
+                   <select ng-model="datosPost.destinatario" class="form-control">
+                        <option selected="selected" value="">¿Algún destinatario en particular?</option>
                         <option ng-repeat="amigo in amigos">{{amigo.nombre}}</option>
                     </select>
+                    <input type="text" id="postimg" ng-model="datosPost.img" class="form-control" placeholder="Inserta la url de una imagen..."/>
                    <!-- <input type="text" ng-model="datosPost.nombre" value={{usuario.nombre}} ng-hide="true"> -->
                     <button type="submit" class="btn btn-info" ng-click="postear()" ng-disabled="cf1.$pristine || cf1.$invalid">Publicar</button>
     
@@ -32,11 +31,11 @@
                         <li ng-repeat="post in posts">
                             <div class="post">
                                 <div class="posthead">
-                                    <img ng-src="{{post.img}}" class="img-responsive" />
+                                    <img ng-src="{{usuario.profile_img}}" class="img-responsive" heigth="50" width="50"/>
                                     <strong class="text-info">{{post.nombre}}<span><img></span>{{post.remitente}}</strong>
                                     <small class="text-right">{{post.fecha}}</small>
                                 </div>
-                                <p>{{post.contenido}}</p>
+                                <p>{{post.contenido}}<img  ng-show="" ng-src="{{post.img}}" alt="{{post.nombre}} Post" ></p>
                             </div>
                         </li>
                     </ul>
