--- a/wusick/app/views/partials/navbarAdmin.html
+++ b/wusick/app/views/partials/navbarAdmin.html
@@ -4,6 +4,6 @@
         <a ng-href="{{item.link}}" id="{{item.id}}">{{item.title}}</a>
     </li>
   </ul>
-  <span style="float:left; display: inline-block;" class="glyphicon glyphicon-wrench"></span>
+  <span style="float:left; display: inline-block; color:#ddd;" class="glyphicon glyphicon-wrench"></span>
   <h3 class="text-muted"> Wusick <small>Panel de administración</small></h3>
 </div>
