--- a/wusick/app/views/partials/main.html
+++ b/wusick/app/views/partials/main.html
@@ -28,6 +28,7 @@
 
                 <div id="listapost">
                     <ul class="list-unstyled">
+    
                         <li ng-repeat="post in posts">
                             <div class="post">
                                 <div class="posthead">
@@ -35,7 +36,10 @@
                                     <strong class="text-info">{{post.nombre}}<span><img></span>{{post.remitente}}</strong>
                                     <small class="text-right">{{post.fecha}}</small>
                                 </div>
-                                <p>{{post.contenido}}<img  ng-show="'this:$src!=null'" data-ng-src="{{post.img}}" alt="{{post.nombre}} Post" ></p>
+                                <p>{{post.contenido}}</p>
+                                <p ng-show="{{post.img}}!=null">
+                                <img class="imgpost" data-ng-src="{{post.img}}" alt="{{post.nombre}} Post">
+                                </p>
                             </div>
                         </li>
                     </ul>
@@ -50,6 +54,7 @@
         <div id="daside"></div>
         <div class="clearfix"></div>
 
+           
 
 
 
